--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -155,6 +155,12 @@
                 "settings": {
                     "foreground": "#cfc"
                 }
+            },
+            {
+                "scope": "renpy.meta.color.#ff0000",
+                "settings": {
+                    "foreground": "#ff0000"
+                }
             }
         ]
     }
