--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -161,6 +161,12 @@
                 "settings": {
                     "foreground": "#ff0000"
                 }
+            },
+            {
+                "scope": "renpy.meta.color.#00ff00",
+                "settings": {
+                    "foreground": "#00ff00"
+                }
             }
         ]
     }
