no more b6 femboy legs
it is a tragic day

--- a/game/scripts/.vscode/settings.json
+++ b/game/scripts/.vscode/settings.json
@@ -155,6 +155,18 @@
                 "settings": {
                     "foreground": "#5b7cc7"
                 }
+            },
+            {
+                "scope": "renpy.meta.color.#ff2d00",
+                "settings": {
+                    "foreground": "#ff2d00"
+                }
+            },
+            {
+                "scope": "renpy.meta.color.#009900",
+                "settings": {
+                    "foreground": "#009900"
+                }
             }
         ]
     }
