--- a/game/scripts/.vscode/settings.json
+++ b/game/scripts/.vscode/settings.json
@@ -167,6 +167,12 @@
                 "settings": {
                     "foreground": "#009900"
                 }
+            },
+            {
+                "scope": "renpy.meta.color.#f54927",
+                "settings": {
+                    "foreground": "#f54927"
+                }
             }
         ]
     }
