a bunch of stuff
added meme sprites, cgs for fluke cake, grammar fixes, tea party is almost done i swear to god

--- a/game/scripts/.vscode/settings.json
+++ b/game/scripts/.vscode/settings.json
@@ -173,6 +173,12 @@
                 "settings": {
                     "foreground": "#f54927"
                 }
+            },
+            {
+                "scope": "renpy.meta.color.#095a10",
+                "settings": {
+                    "foreground": "#095a10"
+                }
             }
         ]
     }
