finished fluke cake

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -248,6 +248,12 @@
 				"settings": {
 					"foreground": "#095a10"
 				}
+			},
+			{
+				"scope": "renpy.meta.color.#f54927",
+				"settings": {
+					"foreground": "#f54927"
+				}
 			}
 		]
 	}
